Revision history for Mason

** denotes an incompatible change

2.04  Feb 24, 2011

2.03  Feb 24, 2011

* Improvements
  - Add -e option to bin/mason

* Fixes
  - Depend on Log::Any 0.08, for Log::Any::Test (David Wheeler)

2.02  Feb 24, 2011

* Fixes
  - Allow index file (index.m, index.pm) to be accessed directly with /index path (Matthias Dietrich)
  - Fix error line # for invalid attribute
  - Include HTMLFilters in eg/blog/install.sh (qiuhw)
  - Fix t/mason-app.t to be perl-location-agnostic (qiuhw)
  - Prevent CPAN from indexing built-in plugin implementation files

* Backend
  - Remove InstanceMeta object, make args() a direct method of component
  - Add pluggable Mason::Component::Import for importing non-Moose things into components

2.01  Feb 20, 2011

* Fixes
  - Declare Devel::GlobalDestruction dependency; get rid of List::MoreUtils dependency

2.00  Feb 16, 2011

- Initial Mason 2 version - see HTML::Mason for previous versions